# python-llm-archive

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-test.yml
llm/: __init__.py  main.py  util.py
llm/api/: anthropicapi.py  claude.py  openaiapi.py
llm/utils/: apikeys.py  parsing.py
tests/: test_anthropic.py  test_claude.py  test_multi_stream.py  test_openai.py
tests/fixtures/anthropic/: test_chat.yaml  test_completion.yaml  test_simple_chat.yaml  test_streaming_chat.yaml  test_streaming_chat_delta.yaml
tests/fixtures/claude/: test_chat.yaml  test_completion.yaml  test_simple_chat.yaml  test_streaming_chat.yaml
tests/fixtures/multi_stream/: test_multistream.yaml
tests/fixtures/openai/: test_chat.yaml  test_completion.yaml  test_completion_chat_model.yaml  test_simple_chat.yaml  test_streaming_chat_method_delta.yaml  test_streaming_chat_method_full.yaml  test_token_overflow.yaml
